# tenforty

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
docs/coverage/: 2025-field-coverage.md
scripts/: convert_to_ods.py  probe_pdf_fields.py  start_unoserver.sh  verify_no_personal_data.py
tenforty/: __init__.py  __main__.py  attestations.py  engine.py  flattener.py  models.py  orchestrator.py  result_translator.py  rounding.py  scenario.py  types.py  uno_engine.py
tenforty/constants/: __init__.py  y2025.py
tenforty/filing/: __init__.py  balance_due.py  pdf.py
tenforty/forms/: f1040.py  (+14 more)
tests/: _scorp_fixtures.py  conftest.py  helpers.py  invariants.py  test_1099g_withholding_compute.py  test_4562_round_trip.py  test_4868_round_trip.py  test_attestations.py  test_attestations_scorp.py  test_balance_due.py  test_ca_540_oracle.py  test_cli_deduction_block.py  test_cli_output_dir.py  test_constants_y2025.py  test_deduction_outputs.py  test_depreciation_macrs.py  test_depreciation_table_generator.py  test_depreciation_tables.py  test_e2e_full_return.py  test_e2e_itemized.py  test_e2e_plan_d.py  test_e2e_simple_w2.py  test_e2e_w2_investments.py  test_engine.py  test_f100s_oracle.py  test_f1040_compute.py  test_f1040_mapping.py  test_f1040_translation.py  test_f1120s_compute.py  test_f1120s_k1_roundtrip.py  test_f1120s_oracle.py  test_f1120s_sch_b_checkbox_render.py  test_f4562_compute.py  test_f4562_oracle.py  test_f4868_compute.py  test_f4868_pdf_translation.py  test_f8582_compute.py  test_f8582_oracle.py  test_f8949_compute.py  test_f8949_oracle.py  (+67 more)
(+59 files in other folders)
